Fix OIS incompatability on mobile

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -6,7 +6,7 @@
   padding: 0.75rem 2rem;
   backdrop-filter: none;
   -webkit-backdrop-filter: none;
-  transition: background 0.3s ease, backdrop-filter 0.3s ease;
+  transition: background 0.1s ease, backdrop-filter 0.3s ease;
   width: 100vw;
   max-width: 1200px;
   display: flex;
